--- a/src/components/HomeComponents/ParkContainer.module.css
+++ b/src/components/HomeComponents/ParkContainer.module.css
@@ -28,7 +28,6 @@
 
 .container {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
