--- a/src/components/auth/Login.module.css
+++ b/src/components/auth/Login.module.css
@@ -3,7 +3,6 @@
   background-size: cover;
   height: 90vh;
   margin: 0;
-  background-color: rgb(9, 115, 115);
 }
 
 .container {
